--- a/07电商网站/css/style.css
+++ b/07电商网站/css/style.css
@@ -82,6 +82,7 @@ body{
 	font-size: 14px;
 	color: #FC3636;
 	font-family: arial;
+	font-weight: 700;
 }
 .main-title strong span{
 	color: #000;
@@ -120,7 +121,7 @@ body{
 	width: 960px;
 	margin: 0 auto;
 }
-#search,.section,.side-section,.side-ad,#footer{
+#search,.section,.side-section,.side-ad,#footer,.activity,.recommend{
 	border: 1px solid #dbdbdb;
 	border-radius: 6px;
 }
@@ -135,7 +136,7 @@ body{
 	border-radius: 0 0 6px 6px;
 }
 #nav{
-	height: 100px;
+	height: 110px;
 	position: relative;
 }
 #search{
@@ -143,9 +144,6 @@ body{
 	height: 114px;
 	margin: 0 auto 10px;
 	position: relative;
-}
-.content{
-
 }
 .main{
 	width: 710px;
@@ -156,6 +154,10 @@ body{
 .section{
 	width: 318px;
 	padding: 0 15px;
+}
+.activity,.recommend{
+	width: 348px;
+	overflow: hidden;
 }
 .options{
 	width: 350px;
@@ -169,7 +171,6 @@ body{
 	width: 240px;
 }
 .side-section{
-	height: 60px;
 	padding: 0 12px;
 }
 .side-ad{
@@ -204,12 +205,10 @@ body{
 		background-color: #fff;
 	}
 	.options .con{
-		width: 348px;
+		width: 318px;
+		padding: 0 15px;
 		border: 1px solid #dbdbdb;
 		border-radius: 0 0 6px 6px;
-		position: absolute;
-		top: 34px;
-		left: 0;
 		z-index: 1;
 	}
 /*header*/
@@ -260,17 +259,17 @@ body{
 	height: 62px;
 	margin: 0 auto;
 	position: relative;
-	top: 10px;
+	top: 20px;
 }
 #nav ul{
 	position: absolute;
-	top: 10px;
+	top: 15px;
 }
 #nav .nav-1{
-	left: 11px;
+	left: 10px;
 }
 #nav .nav-2{
-	right: 11px;
+	right: 10px;
 }
 #nav ul li{
 	float: left;
@@ -281,7 +280,7 @@ body{
 	width: 66px;
 	color: #000;
 	text-align: center;
-	padding-top: 50px;	
+	padding-top: 52px;	
 }
 	#nav .nav-1 li:nth-of-type(1){background-position: 8px -0px;}
 	#nav .nav-1 li:nth-of-type(2){background-position: 8px -66px;}
@@ -304,13 +303,6 @@ body{
 	#nav .nav-2 li:nth-of-type(3):hover{background-position: 8px -792px;}
 	#nav .nav-2 li:nth-of-type(4):hover{background-position: 8px -858px;}
 	#nav .nav-2 li:nth-of-type(5):hover{background-position: 8px -924px;}
-
-	#nav ul li a:hover{
-		padding-top: 53px;
-		text-decoration: underline;
-		font-size: 10px;
-	}
-
 #search .bar{
 	width: 958px;
 	height: 64px;
@@ -378,14 +370,16 @@ body{
 	float: left;
 	margin-right: 10px;
 	color: #ea7a7a;
+	font-size: 12px;
 	box-shadow: inset 2px 2px 3px rgba(0,0,0,0.25)
 }
 #search .form .btn{
 	width: 63px;
 	height: 26px;
 	border:none;
-	background: url(../img/search-img.png) no-repeat -142px 0;
+	background: url(../img/search-img.png) no-repeat -145px 2px;
 	float: left;
+	cursor: pointer;
 }
 #search .key-text{
 	width: 206px;
@@ -414,16 +408,16 @@ body{
 	font-weight: normal;
 }
 .video{
-	margin-bottom: 13px;
+	margin-bottom: 20px;
 }
 .video-list{
 	padding-left: 75px;
-	height: 78px;
-	background: url(../img/video-bg.png) no-repeat 3px -40px;
+	height: 99px;
+	background: url(../img/video-bg.png) no-repeat 3px -28px;
 }
 .video-list li{
 	text-indent: 10px;
-	line-height: 20px;
+	line-height: 25px;
 	background: url(../img/dot.gif) no-repeat 5px center;
 }
 .video-list a{
@@ -432,28 +426,666 @@ body{
 .video-list a:hover{
 	text-decoration: underline;
 }
-/*选项卡*/
+/*login*/
+.login-form ul{
+	padding-top: 10px;
+}
+.login-form li{
+	display: block;
+	height: 30px;
+}
+.login-form .text,.login-form .password{
+	width: 80px;
+	height: 18px;
+	border: 1px solid #ddd;
+	border-radius: 4px;
+	cursor: text;
+}
+.login-form strong{
+	color: inherit;
+	font-weight: normal;
+}
+.login-form  label{
+	cursor: pointer;
+	font-size: 12px;
+	line-height: 18px;
+	color: #666;
+}
+.checkbox{
+	width: 10px;
+	height: 10px;
+	color: #666;
+	border-radius: 3px;
+	border: 1px solid #ddd;
+}
+/*ѡ???*/
 .nav li .triangle-down-red,.nav li .triangle-down-gray{
 	position: absolute;
 	top: 14px;
 	right: 14px;
 }
 .hot-list{
-
+	padding-top: 10px;
 }
 .hot-list li{
 	width: 318px;
-	height: 102px;
+	height: 95px;
+	margin-bottom: 6px;
+	background: url(../img/hot-list-li-bg.jpg);
 }
 .hot-list .img{
 	float: left;
+	width: 106px;
+	height: 95px;
 }
 .hot-list .img a{
 	display: block;
 	width: 104px;
-	height: 80px;
+	height: 83px;
 	border:1px solid #e6e6e6;
 }
 .hot-list .text{
-
+	width: 190px;
+	float: right;
 }
+.hot-list .text h3 {
+	line-height: 24px;
+}
+.hot-list .text h3 a{
+	font-weight: normal;
+	color: #bb0d0d;
+}
+.hot-list .text h3 a:hover{
+	font-weight: bold;
+}
+.hot-list .text p{
+	line-height: 16px;
+	color: #6e6e6e;
+}
+.hot-list-more{
+	float: none;
+	display: block;
+	margin-bottom: 5px;
+	position: relative;
+	left: 10px;
+}
+/*tab*/
+.tab{
+	height: 25px;
+	border-bottom: 1px solid #dadada;
+	margin-top: 10px;
+}
+.tab ul{
+	height: 26px;
+	margin-bottom: -1px;
+	position: relative;
+}
+.tab li{
+	height: 24px;
+	border: 1px solid #dadada;
+	border-radius: 4px;
+	margin-right: -1px;
+	text-align: center;
+	line-height: 24px;
+	color: #666;
+	float: left;
+	position: relative;
+	cursor: pointer;
+}
+.tab .active{
+	border-bottom: 1px solid #fff;
+	background-color: #fff;
+	font-weight: bold;
+	color: #454545;
+}
+.tab li a{
+	top: 10px;
+	right: 12px;
+}
+.section .tab{
+	padding: 0 10px;
+}
+.section .tab li{
+	width: 98px;
+}
+.side-section .tab{
+	padding: 0 6px;
+}
+.side-section .tab li{
+	width: 66px;
+}
+/*list-section*/
+.list-section{
+	padding-top: 5px;
+	padding-bottom: 5px;
+}
+.list-section li{
+	height: 27px;
+	border-top: 1px dotted #dadada;
+	line-height: 27px;
+	background: url(../img/dot.gif) no-repeat 5px center;
+	text-indent: 14px;
+	vertical-align: middle;
+}
+.list-section li a{
+	color: #333;
+}
+.list-section li a:hover{
+	text-decoration: underline;
+}
+	.list-section li em{
+		color: #C6BFBF;
+	}
+	.list-section li span{
+		color: #F66363;
+	}
+	.list-section .title{
+		background: none;
+		border-top: none;
+	}
+	.list-section .title span{
+		color: #999;
+	}
+		.side-section .title .col2{
+			color: #F66363;
+		}
+	.list-section .col1,.list-section .col2,.list-section .col3{
+		float: left;
+	}
+	.side-section .col1{
+		width: 137px;
+	}
+	.side-section .col2{
+		width: 35px;
+		text-align: center;
+		text-indent: 0;
+	}
+	.side-section .col3{
+		width: 36px;
+		text-align: center;
+		text-indent: 0;
+		color: #999;
+	}
+	.section .col1{
+		width: 273px;
+	}
+	.section .col2{
+		width: 35px;
+		text-indent: 0;
+	}
+	.section .col2 img{
+		position: relative;
+		top: 7px;
+	}
+		/*soso*/
+		.soso{
+			border-top: 1px dotted #dadada;
+			height: 44px;
+			padding: 10px 0 0 10px;
+		}
+		.soso strong{
+			padding-top: 3px;
+		}
+		.soso .text{
+			width: 172px;
+			height: 20px;
+			padding: 0 4px;
+			border: 1px solid #9c9c9c;
+			border-radius: 4px;
+			line-height: 20px;
+			color: #9c9c9c;
+		}
+		.soso .btn{
+			width: 25px;
+			height: 25px;
+			background-color: #F34242;
+			color: #fff;
+			border-radius: 50%;
+			border: none;
+		}
+/*pic-list*/
+.pic-list{}
+.pic-list li{
+	overflow: hidden;
+}
+.pic-list .img{
+	width: 96px;
+	height: 73px;
+	position: relative;
+}
+.pic-list .img a{
+	display: block;
+	width: 90px;
+	height: 67px;
+	padding: 2px;
+	border:1px solid #dadada;
+	border-radius: 2px;
+}
+.pic-list .img a:hover{
+	border: 1px solid #b80000;
+}
+.pic-list .text{
+	width: 108px;
+}
+.pic-list .text h3{}
+.pic-list .text h3 a{
+	color: #b80000;
+	font-weight: normal;
+	font-size: 12px;
+}
+.pic-list .text p{
+	color: #999;
+}
+.pic-list .text p a{
+	color: #666;
+}
+.pic-list .text p a:hover{
+	color: #b80000;
+	text-decoration: underline;
+}
+	.wrap1 li{
+		border-bottom: 1px dotted #dadada;
+		padding-bottom: 10px;
+		margin-bottom: 10px;
+	}
+	.wrap1 li:last-child{
+		border-bottom: none;
+		margin-bottom: 0;
+	}
+	.wrap1,.wrap2{
+		padding-top: 10px;
+	}
+	.wrap2 .pic-list{
+		overflow: hidden;
+	}
+	.wrap2 .pic-list li{
+		float: left;
+		width: 107px;
+		height: 150px;
+	}
+	.wrap2 .pic-list h3{
+		line-height: 30px;
+	}
+/*day-title*/
+.day-title{
+	height: 70px;
+	position: relative;
+	background: url(../img/day-title-bg.jpg) no-repeat;
+	overflow: hidden;
+}
+.day-title strong,.day-title span{
+	position: absolute;
+	left: 24px;
+}
+.day-title strong{
+	font-size: 12px;
+	font-family: arial;
+	color: #ea2b31;
+	top: 16px;
+}
+.day-title span{
+	font-size: 24px;
+	color: #333;
+	top: 28px;
+}
+.day-title em{
+	font-size: 36px;
+	color: #ea2b31;
+	position: absolute;
+	top: 16px;
+	left: 128px;
+}
+	.activity,.day-title{
+		background-position: right 0;
+	}
+	.recommend .day-title{
+		background-position: right -72px;
+	}
+/*activity*/
+.activity{
+	overflow: visible;
+}
+.activity .con{
+	padding: 10px 25px;
+}
+.activity .info{
+}
+	.activity .info .img{
+		border: 3px solid #eaeaea;
+	}
+	.activity .info .img img{
+		height: 84px;
+		width: 67px;
+	}
+	.activity .info .img span{
+		display: block;
+		width: 44px;
+		height: 38px;
+		background: url(../img/today.png) no-repeat;
+		position: absolute;
+		top: 0;
+		right: 0;
+	}
+	.activity .text{
+		width: 200px;
+	}
+	.activity .info h3{
+		height: 40px;
+	}
+	.activity .info em{
+		color: #c91818;
+		display: inline-block;
+		width: 20px;
+		height: 20px;
+		line-height: 20px;
+		text-align: center;
+		border:1px solid #dbdbdb;
+		border-radius: 2px;
+		font-family: arial;
+	}
+	.activity .info span{
+		font-size: 13px;
+	}
+	.activity .info p{
+		color: #999;
+		line-height: 20px;
+	}
+
+.calendar{
+	/*width: 294px;*/
+	position: relative;
+}
+	.calendar h3{
+		width: 294px;
+		height: 34px;
+		line-height: 34px;
+		text-align: center;
+		word-spacing: 10px;
+	}
+	.calendar h3 span{
+		font-size: 14px;
+		font-family: arial;
+	}
+	.calendar ol{
+		width: 294px;
+		height: 208px;
+	}
+	.calendar ol li{
+		width: 40px;
+		height: 40px;
+		line-height: 40px;
+		text-align: center;
+		margin: 0 2px 2px 0;
+		float: left;
+		background-color: #EAEAEA;
+		position: relative;
+	}
+	.calendar .normal{
+		background: #f8f8f8;
+		color: #ccc;
+	}
+	.calendar .active{
+		width: 36px;
+		height: 36px;
+		border: 2px solid #d30408;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	.calendar ol .img{
+		width: 40px;
+		height: 40px;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+		.today-info{
+			height: 84px;
+			width: 294px;
+			padding: 10px;
+			border: 1px solid #c0c0c0;
+			position: absolute;
+			top: 130px;
+			left: 260px;
+			background-color: #fff;
+			/*box-shadow: 4px 4px 0 rgba(0,0,0,0.2);*/
+			filter: drop-shadow( 4px 4px 0px rgba(0,0,0,0.2));
+		}
+		.today-info .img{
+			width: 80px;
+			height: 80px;
+			border: 2px solid #dbdbdb;
+		}
+		.today-info .text{
+			width: 200px;
+		}
+		.today-info span{
+			display: block;
+			width: 0px;
+			height: 0px;
+			overflow: hidden;
+			border: 10px solid transparent;
+			border-right-color: #fff;
+			position: absolute;
+			left: -18px;
+			top: 47px;
+			filter: drop-shadow( -1px 1px 0px #c0c0c0);
+		}
+		.today-info .text h4{
+			font-size: 13px;
+		}
+		.today-info .text strong{
+			color:  #c91818;
+		}
+		.today-info .text p{
+			color: #999;
+			line-height: 20px;
+		}
+
+/*recommend*/
+.recommend .pic{
+	width: 294px;
+	height: 168px;
+	padding: 12px 12px 0;
+	background-color: #f8f8f8;
+	position:relative;
+	margin: 0 auto;
+	border-radius: 6px;
+}
+	.recommend .pic ul{
+		width: 223px;
+		height: 133px;
+		position: absolute;
+		top: 12px;
+		left: 12px;
+	}
+	.recommend .pic ul li{
+		width: 223px;
+		height: 133px;
+		border: 1px solid #fff;
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	.recommend .pic ul li a{}
+	.recommend .pic ul li a img{
+		width: 223px;
+		height: 133px;
+	}
+	.recommend .pic ol{
+		position: absolute;
+		top: 12px;	
+		right: 12px;
+	}
+	.recommend .pic ol li{
+		width: 54px;
+		height: 30px;
+		border: 3px solid #fff;
+		margin-bottom: 13px;
+	}
+	.recommend .pic ol .active{
+		border: 3px solid #FBC1C1;
+	}
+	.recommend .pic ol li img{
+		width: 54px;
+		height: 30px;
+	}
+	.recommend .pic p{
+		line-height: 32px;
+		position: absolute;
+		left: 12px;
+		bottom: 0;
+	}
+		.recommend-list{
+		padding-top: 5px;
+		padding-bottom: 5px;
+		}
+		.recommend-list li{
+			height: 27px;
+			line-height: 27px;
+			text-indent: 14px;
+			vertical-align: middle;
+			text-indent: 40px;
+		}
+		.recommend-list li a{
+			color: #333;
+		}
+		.recommend-list li a:hover{
+			text-decoration: underline;
+		}
+		.recommend-list li .col2{
+			padding-left: 10px;
+		}
+		.recommend-list li .col3{
+			float: right;
+			padding-right: 20px;
+			color: #999;
+		}
+/*bbs*/
+.bbs{
+	height: 280px;
+	padding-top: 10px;
+}
+.bbs ol{}
+.bbs ol li{
+	height: 30px;
+	line-height: 30px;
+	margin-bottom: 3px;
+	background-color: #f8f8f8;
+	border-radius: 6px;
+	vertical-align: middle;
+	position: relative;
+}
+	.bbs ol strong,.bbs ol a{
+		float: left;
+	}
+	.bbs ol strong{
+		color: #d80000;
+		width: 45px;
+		text-indent: 10px;
+	}
+	.bbs ol img{
+		display: none;
+	}
+	.bbs ol a{
+		color: #333;
+	}
+	.bbs ol a:hover{
+
+	}
+	.bbs ol span{
+		display: none;
+	}
+	.bbs ol em{
+		display: none;
+	}
+	.bbs ol b{
+		color: #666;
+		float: right;
+		padding-right: 22px;
+		font-weight: normal;
+	}
+	.bbs .active{
+		height: 70px;
+		background-color: #d90000;
+	}
+	.bbs .active img{
+		position: absolute;
+		display: block;
+		top: 10px;
+		left: 10px;
+		border-radius: 2px;
+	}
+	.bbs .active a{
+		color: #fff;
+		font-weight: bold;
+		position: absolute;
+		top: 7px;
+		left: 70px;
+	}
+	.bbs .active span{
+		display: block;
+		color: #fff;
+		position: absolute;
+		top: 33px;
+		left: 70px;
+	}
+	.bbs .active b{
+		display: none;
+	}
+	.bbs .active em{
+		display: block;
+		color: #fff;
+		position: absolute;
+		font-size: 26px;
+		font-weight: bold;
+		right: 4px;
+		bottom: -5px;
+		font-family: arial;
+	}
+/*hot*/
+.hot-area{
+	height: 258px;
+	margin-top: 10px;
+}
+.hot-area li{
+	margin: 0 2px 2px 0;
+	float: left;
+	position: relative;
+}
+.hot-area li,.hot-area li img{
+	width: 78px;
+	height: 78px;
+}
+	.hot-area .area1,.hot-area .area1 img{
+		width: 156px;
+		height: 78px;
+	}
+	.hot-area .area2,.hot-area .area2 img{
+		width: 77px;
+		height: 78px;
+	}
+	.hot-area  p{
+		width: 144px;
+		height: 66px;
+		padding-left: 12px;
+		padding-top: 12px;
+		background-color: rgba(0,0,0,0.5);
+		color: #fff;
+		position: absolute;
+		top: 0;
+		left: 0;
+		line-height: 18px;
+	}
+.shop360{
+	padding: 10px 0px;
+}
+.shop360 img{
+	width: 214px;
+	height: 150px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+
