--- a/07电商网站/css/style.css
+++ b/07电商网站/css/style.css
@@ -77,6 +77,9 @@ body{
 .triangle-down-gray{
 	border-top: 4px solid #c4bdbd;
 }
+.main-title{
+	margin-bottom: 10px;
+}
 .main-title strong{
 	height: 40px;
 	font-size: 14px;
@@ -198,6 +201,7 @@ body{
 		border-bottom: none;
 		border-radius: 6px 6px 0 0;	
 		position: relative;
+		cursor: pointer;
 	}
 	.options .nav .active{
 		width: 172px;
@@ -206,10 +210,15 @@ body{
 	}
 	.options .con{
 		width: 318px;
-		padding: 0 15px;
+		padding: 10px 15px 0;
+		padding-top: 10px;
 		border: 1px solid #dbdbdb;
 		border-radius: 0 0 6px 6px;
 		z-index: 1;
+	}
+	.options .trans{
+		width: 318px;
+		height: 268px;
 	}
 /*header*/
 #header .city{
@@ -231,7 +240,8 @@ body{
 	background-color: #fff;
 }
 #header .city a:hover{
-	background-color: #effae2;
+	background-color: #FAEBEB;
+	color: #d60d03;
 }
 #header .link{
 	padding-right: 20px;
@@ -319,32 +329,32 @@ body{
 	left: 226px;
 	top: -27px;
 }
-#search .menu li{
-	float: left;
-	width: 78px;
-	height: 25px;
-	margin-right: 1px;
-	text-align: center;
-	line-height: 25px;
-	font-size: 14px;
-	display: inline-block;
-	border: 1px solid #f8d0bf;
-	border-bottom: none;
-	border-radius: 5px 5px 0 0;
-	box-shadow: 1px 0px 2px rgba(176,176,176,0.3);
-	cursor: pointer;
-}
-#search .menu .active{
-	height: 27px;
-	background: #e21c01;
-	color: #fff;
-	border: 1px solid #e21c01;
-	font-weight: bold;
-	position: relative;
-	top: -1px;
-	box-shadow: none;
-	text-shadow: 2px 2px 3px rgba(0,0,0,0.25);
-}
+	#search .menu li{
+		float: left;
+		width: 78px;
+		height: 25px;
+		margin-right: 1px;
+		text-align: center;
+		line-height: 25px;
+		font-size: 14px;
+		display: inline-block;
+		border: 1px solid #f8d0bf;
+		border-bottom: none;
+		border-radius: 5px 5px 0 0;
+		box-shadow: 1px 0px 2px rgba(176,176,176,0.3);
+		cursor: pointer;
+	}
+	#search .menu .active{
+		height: 27px;
+		background: #e21c01;
+		color: #fff;
+		border: 1px solid #e21c01;
+		font-weight: bold;
+		position: relative;
+		top: -1px;
+		box-shadow: none;
+		text-shadow: 2px 2px 3px rgba(0,0,0,0.25);
+	}
 #search .img{
 	width: 142px;
 	height: 100px;
@@ -360,27 +370,27 @@ body{
 	top: 36px;
 	z-index: 3;
 }
-#search .form .text{
-	width: 380px;
-	height: 26px;
-	padding: 0 12px;
-	border-style: none;
-	background: #fff1ef;
-	border-radius: 3px;
-	float: left;
-	margin-right: 10px;
-	color: #ea7a7a;
-	font-size: 12px;
-	box-shadow: inset 2px 2px 3px rgba(0,0,0,0.25)
-}
-#search .form .btn{
-	width: 63px;
-	height: 26px;
-	border:none;
-	background: url(../img/search-img.png) no-repeat -145px 2px;
-	float: left;
-	cursor: pointer;
-}
+	#search .form .text{
+		width: 380px;
+		height: 26px;
+		padding: 0 12px;
+		border-style: none;
+		background: #fff1ef;
+		border-radius: 3px;
+		float: left;
+		margin-right: 10px;
+		color: #ea7a7a;
+		font-size: 12px;
+		box-shadow: inset 2px 2px 3px rgba(0,0,0,0.25)
+	}
+	#search .form .btn{
+		width: 63px;
+		height: 26px;
+		border:none;
+		background: url(../img/search-img.png) no-repeat -145px 2px;
+		float: left;
+		cursor: pointer;
+	}
 #search .key-text{
 	width: 206px;
 	color: #fff;
@@ -391,12 +401,92 @@ body{
 	overflow: hidden;
 	text-overflow: ellipsis;
 }
-#search .key-text a{
-	color: #fff;
+	#search .key-text a{
+		color: #fff;
+	}
+	#search .key-text a:hover{
+		text-decoration: underline;
+	}
+#search .update{
+	height: 30px;
 }
-#search .key-text a:hover{
-	text-decoration: underline;
+	#search .update .wrap{
+		height: 30px;
+		width: 404px;
+		overflow: hidden;
+		position: relative;
+		left: 226px;
+		top: 83px;
+	}
+	#search .update ul{
+		width: 380px;
+		height: 30px;
+		position: absolute;
+		left: 0px;
+		top: 0px;
+	}
+	#search .update ul li{
+		height: 30px;
+		width: 350px;
+		line-height: 30px;
+		white-space: nowrap; 
+		text-overflow: ellipsis;
+		overflow: hidden;
+	}
+	#search .update li a{
+		color: #000;
+	}
+	#search .update li strong{
+		color: #F51F1F;
+		letter-spacing: 2px;
+	}
+	#search .update li span{
+		color: #999;
+		letter-spacing: 2px;
+	}
+	#search .update .triangle-up{
+		top: 10px;
+		right: 20px;
+	}
+	#search .update .triangle-down-red{
+		bottom: 10px;
+		right: 20px;
+	}
+/*footer*/
+#footer .wrap{
+	width: 500px;
+	height: 40px;
+	margin: 0 auto;
+	text-align: center;
+	font-size: 16px;
+	line-height: 40px;
+	margin-top: 10px;
+	color: #666;
 }
+.help{
+	height: 280px;
+	width: 308px;
+	padding-left: 10px;
+}
+.help article{
+	width: 154px;
+	float: left;
+}
+	.help h3{
+		font-size: 14px;
+		font-weight: normal;
+		line-height: 30px;
+	}
+	.help a{
+		line-height: 24px;
+		color: #666;
+		font-size: 12px;
+		text-indent: 2em;
+		display: inline-block;
+	}
+	.help a:hover{
+		text-decoration: underline;
+	}
 /*video-section*/
 .video-title{
 	height: 42px;
@@ -428,7 +518,7 @@ body{
 }
 /*login*/
 .login-form ul{
-	padding-top: 10px;
+	margin-bottom: 6px;
 }
 .login-form li{
 	display: block;
@@ -464,10 +554,7 @@ body{
 	top: 14px;
 	right: 14px;
 }
-.hot-list{
-	padding-top: 10px;
-}
-.hot-list li{
+.hot-list ul li{
 	width: 318px;
 	height: 95px;
 	margin-bottom: 6px;
@@ -586,6 +673,9 @@ body{
 	.list-section .title span{
 		color: #999;
 	}
+	.wrap2 .list-section li:first-child{
+		border-top: none;
+	}
 		.side-section .title .col2{
 			color: #F66363;
 		}
@@ -693,7 +783,6 @@ body{
 		margin-bottom: 0;
 	}
 	.wrap1,.wrap2{
-		padding-top: 10px;
 	}
 	.wrap2 .pic-list{
 		overflow: hidden;
@@ -850,6 +939,8 @@ body{
 			background-color: #fff;
 			/*box-shadow: 4px 4px 0 rgba(0,0,0,0.2);*/
 			filter: drop-shadow( 4px 4px 0px rgba(0,0,0,0.2));
+			display: none;
+			z-index: 3;
 		}
 		.today-info .img{
 			width: 80px;
@@ -943,9 +1034,8 @@ body{
 		.recommend-list li{
 			height: 27px;
 			line-height: 27px;
-			text-indent: 14px;
 			vertical-align: middle;
-			text-indent: 40px;
+			text-indent: 20px;
 		}
 		.recommend-list li a{
 			color: #333;
@@ -964,7 +1054,6 @@ body{
 /*bbs*/
 .bbs{
 	height: 280px;
-	padding-top: 10px;
 }
 .bbs ol{}
 .bbs ol li{
