--- a/05Bootstrap实战1/实战01/css/style.css
+++ b/05Bootstrap实战1/实战01/css/style.css
@@ -1,6 +1,6 @@
 @charset "utf-8";
 body {
-	font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, "\5B8B\4F53", simsun, sans-serif;
+	font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei UI", "Microsoft YaHei", SimHei, simsun, sans-serif;
 	color: #666;
 }
 .logo{
