--- a/08Bootstrap复杂页面/css/style.css
+++ b/08Bootstrap复杂页面/css/style.css
@@ -13,7 +13,7 @@ h1,h2,h3,h4,h5,h6{
 a,a:hover,a:focus{
 	text-decoration:none;
 }
-/*tf-menu page style start(navbar)*/
+/*tf-menu*/
 #tf-menu{
 	padding:20px;
 	transition:all 0.5s;
@@ -34,24 +34,20 @@ a,a:hover,a:focus{
 	letter-spacing:1px;
 	color:#fff;
 }
-.navbar-toggle{
-	border-radius:0;
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+    color: #FCAC45 !important;
+    background-color: transparent;
 }
 .on{
 	background-color:#222 !important;
-	padding:0 !important;
+	padding: 0px !important;
 }
-.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
-	background-color:#fcac45;
-	border-color:#fcac45;
-}
-.navbar-default .navbar-toggle:hover > .icon-bar, .navbar-default .navbar-toggle:focus > .icon-bar{
-	background-color:#fff;
-}
-/*end tf-menu page style(navbar)*/
-/*tf-home page style start*/
+/*end tf-menu*/
+/*tf-home*/
 #tf-home{
-	background-image:url("../images/bg-01.jpg");
+	background-image:url("../img/bg-01.png");
 	background-size:cover;
 	background-position:center;
 	background-repeat:no-repeat;
@@ -91,9 +87,8 @@ a.fa.fa-angle-down:hover{
 	background-color:#fcac45;
 	border:2px solid #fcac45;
 }
-/*end style tf-home page*/
-
-/*tf-about page style start*/
+/*end home*/
+/*about*/
 #tf-about{
 	padding:80px 0;
 }
@@ -125,59 +120,13 @@ p.intro {
 .about-list li span{
 	margin-right:10px;
 }
-/*end style tf-about page*/
+/*end about*/
 
-/*tf-team page style start*/
+/*tf-team*/
 #tf-team{
-	background:url("../images/bg-02.jpg") no-repeat center fixed;
-	background-size:cover; color:#fff;
-}
-#tf-team .overlay{
-    background: -moz-linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.73) 17%, rgba(0,0,0,0.66) 35%, rgba(0,0,0,0.55) 62%, rgba(0,0,0,0.4) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.8)), color-stop(17%,rgba(0,0,0,0.73)), color-stop(35%,rgba(0,0,0,0.66)), color-stop(62%,rgba(0,0,0,0.55)), color-stop(100%,rgba(0,0,0,0.4)));
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    background: -o-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    background: -ms-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#66000000',GradientType=0 );
-    height: auto;
-    padding: 80px 0;
-}
-/*轮播区域开始*/
-#team{
-	margin:0 auto;
-}
-#team .item {
-    padding: 0; margin: 15px; color: #FFF; text-align: center;
-}
-#team .thumbnail {
-    background: transparent; border: 0;
-}
-#team .thumbnail .caption {
-    padding: 9px; color: #F2F2F2;
-}
-#team .item .thumbnail:hover > img.img-circle.img-team {
-    border: 4px solid #FCAC45;
-}
-#team  img.img-circle.img-team {
-    width: 120px; height: 120px;
-    border: 4px solid transparent; transition: all 0.5s;
-}
-#team h3 {
-    font-size: 18px; font-weight: 900; text-transform:none;
-}
-/*轮播区域结束*/
-.owl-theme .owl-controls .owl-page.active span {
-    background: #FCAC45;
-}
-.owl-theme .owl-controls .owl-page span {
-    display: block; width: 10px; height: 10px; margin: 5px 7px;
-    opacity: 1; background: #FFF; transition: all 0.5s; border-radius:0;
-}
-/*end style tf-team page*/
-/*tf-services page style start*/
-#tf-services{
-	padding:80px 0;
+	background:url("../img/bg-02.png") no-repeat center fixed;
+	background-size:cover; 
+	color:#fff;
 }
 .section-title.center{
 	padding:30px 0;
@@ -199,6 +148,42 @@ p.intro {
     position: relative;
     left: 17%;
 }
+#tf-team .overlay{
+    background: -moz-linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.73) 17%, rgba(0,0,0,0.66) 35%, rgba(0,0,0,0.55) 62%, rgba(0,0,0,0.4) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.8)), color-stop(17%,rgba(0,0,0,0.73)), color-stop(35%,rgba(0,0,0,0.66)), color-stop(62%,rgba(0,0,0,0.55)), color-stop(100%,rgba(0,0,0,0.4)));
+    background: -webkit-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
+    background: -o-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
+    background: -ms-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
+    background: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#66000000',GradientType=0 );
+    height: auto;
+    padding: 80px 0;
+}
+#team{
+	margin:0 auto;
+}	
+#team .thumbnail {
+    background: transparent; 
+    border: 0;
+}
+#team .thumbnail .caption {
+    padding: 9px; color: #F2F2F2;
+}
+#team .thumbnail:hover > img.img-circle.img-team {
+    border: 4px solid #FCAC45;
+}
+#team  img.img-circle.img-team {
+    width: 120px; height: 120px;
+    border: 4px solid transparent; transition: all 0.5s;
+}
+#team h3 {
+    font-size: 18px; font-weight: 900; text-transform:none;
+}
+/*end team*/
+/*tf-services*/
+#tf-services{
+	padding:80px 0;
+}
 .marTop{
 	margin-top:40px;
 }
@@ -213,8 +198,8 @@ p.intro {
     transition: all 0.5s;
 }
 #tf-services i.fa.fa-mobile {
-    font-size: 50px;
-    padding: 20px 25px;
+    font-size: 60px;
+    padding: 18px 23px;
 }
 #tf-services .service:hover>i.fa {
     background: #FCAC45;
@@ -226,8 +211,7 @@ p.intro {
     color: #FCAC45 !important;
     background-color: transparent;
 }
-/*end style tf-services page*/
-/*tf-works page style start*/
+/*tf-works*/
 #tf-works ul.type li{
     display: inline-block;
     margin-left: 20px;
@@ -268,8 +252,8 @@ p.intro {
 .isotope-item {
     margin-right: -1px;
 }
-/*end style tf-works page*/
-/*tf-contact page style start*/
+/*end works*/
+
 #tf-contact {
     padding: 80px 0;
 }
@@ -307,40 +291,7 @@ button.btn.tf-btn.btn-default {
     color: #ffffff;
     text-transform: uppercase;
 }
-/*end style tf-contact page*/
-/*tf-testimonials page style start*/
-#tf-testimonials {
-    background: url(../images/bg-04.jpg);
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    color: #ffffff;
-}
-#tf-testimonials .overlay {
-    background: -moz-linear-gradient(top, rgba(0,0,0,0.8) 0%, rgba(0,0,0,0.73) 17%, rgba(0,0,0,0.66) 35%, rgba(0,0,0,0.55) 62%, rgba(0,0,0,0.4) 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(0,0,0,0.8)), color-stop(17%,rgba(0,0,0,0.73)), color-stop(35%,rgba(0,0,0,0.66)), color-stop(62%,rgba(0,0,0,0.55)), color-stop(100%,rgba(0,0,0,0.4)));
-    background: -webkit-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    background: -o-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    background: -ms-linear-gradient(top, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    background: linear-gradient(to bottom, rgba(0,0,0,0.8) 0%,rgba(0,0,0,0.73) 17%,rgba(0,0,0,0.66) 35%,rgba(0,0,0,0.55) 62%,rgba(0,0,0,0.4) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cc000000', endColorstr='#66000000',GradientType=0 );
-    padding: 80px 0;
-    background-attachment: fixed;
-}
-#tf-testimonials h5 {
-    text-transform: uppercase;
-    font-weight: 600;
-    line-height: 20px;
-	font-size:12px;
-}
-#testimonial .item p {
-    font-weight: 300;
-    margin: 30px 0;
-    color: #d1d1d1;
-}
-/*end style tf-testimonials page*/
-/*Footer style start*/
+
 nav#footer {
     background: #222222;
     color: #ffffff;
@@ -375,7 +326,6 @@ ul.footer-social li {
     border-color: #FCAC45;
     color: #ffffff;
 }
-/*end style Footer page*/
 @media (max-width: 768px){
 	.content {
 		padding: 40% 0 0;
